Wed Oct 10 20:23:11 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_ami_pre_proc.cpp:
        
          Fixed typo in comment and changed a C-style cast to C++-style.
          
        * TAO_IDL/util/utl_identifier.cpp:
        
          Fixed check in the constructor for an escaped indentifier to
          handle the case where a C++ keyword clash prefix and an AMI
          exception holder suffix are both present in the arg string.
          Thanks to Greg <ustrel at free dot fr> for reporting the 
          compile failure that results from the mismatch between code
          generated from the AMI 'implied IDL' node and code generated
          from the original node and mangled on the fly.

Tue Oct  9 02:55:18 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/POA/EndpointPolicy/server.cpp:

          fix to address bug 3075. Replace references to "localhost" with
          the hostname obtained via ACE_OS::hostname(). If this causes
          trouble on windows hosts that are improperly configured so that
          they cannot resolve themselves, then a "-h <hostname>" command
          line parameter can be added to the server to explicitly set the
          hostname to localhost or something else as needed.

Thu Oct  4 23:20:27 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * tao/AnyTypeCode/Any_Unknown_IDL_Type.cpp (to_value):
          (to_abstract_base):

          Ported Any value ownership fix for to_object() described in
          ChangeLog entry "Oct 30 18:56:03 UTC 2006  Jeff Parsons
          <j.parsons@...> " to these methods.

          Fixed TypeCode kind comparison typo in to_abstract_base()
          method.  s/tk_value/tk_abstract_interface

          Replaced TypeCode kind unaliasing code with calls to
          TAO::unaliased_kind().

          Const-correctness improvements.

          Wide string improvements.

        * tao/Valuetype/ValueBase.cpp:
